--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,8 @@ a {
     height: 40px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -124,7 +126,7 @@ p {
 }
 
 .container {
-    max-width: 1158px; 
+    width: 1158px; 
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -138,6 +140,8 @@ p {
     line-height: 1.5;
     
     padding: 24px 0;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link {
@@ -152,10 +156,27 @@ p {
 
 .current-link {
     color: var(--primary-brand-color);
+    position: relative;
 }
+
+.current-link::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+
+    display: block;
+    
+    width: 100%;
+    height: 4px;
+    background-color: var(--primary-brand-color);
+    border-radius: 2px;
+}
+
 .list {
     list-style: none;
 }
+
 .logo {
     color: var(--primary-brand-color);
     font-family: 'Raleway', sans-serif;
@@ -166,9 +187,11 @@ p {
 
     margin-right: 76px;
 }
+
 .logo-dark {
     color: var(--dark-text-color);
 }
+
 .logo-white {
   color: var(--secondary-background-color);
 }
@@ -234,10 +257,15 @@ p {
 
     border-radius: 4px;
     border: 0;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .hero-button:hover {
     background-color: var(--hover-button-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .subtitle {
@@ -343,6 +371,7 @@ p {
     height: 40px;
     background-color: var(--primary-brand-color);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -371,6 +400,8 @@ p {
 
     border: 1px solid currentColor;
     border-radius: 4px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -416,12 +447,18 @@ p {
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
     background-color: var(--hover-button-color) ;
     color: var(--background-color);
+    border-color: var(--hover-button-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -452,4 +489,22 @@ p {
 .picture-link:hover,
 .picture-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    
+    display: block;
+    
+    width: 100%;
+    height: 100%;
+    
+    background-color: var(--primary-brand-color);
+}
+
+.overlay-container {
+    position: relative;
 }
