--- a/css/styles.css
+++ b/css/styles.css
@@ -484,27 +484,40 @@ p {
     display: block;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
     color: var(--main-text-color);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .picture-link:hover,
-.picture-link:focus {
+.picture-link:focus  {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    
 }
 
-.overlay::after {
-    content: '';
+.img-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
     position: absolute;
     left: 0;
     top: 0;
-    
-    display: block;
-    
     width: 100%;
     height: 100%;
     
     background-color: var(--primary-brand-color);
+    
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--secondary-background-color);
+    padding: 40px 32px;
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay-container {
-    position: relative;
+.picture-link:hover .overlay,
+.picture-link:focus .overlay {
+    transform: translateY(0);
 }
