--- a/css/styles.css
+++ b/css/styles.css
@@ -131,22 +131,27 @@ p {
     margin: 0 auto;
 }
 
-
-.link {
-    text-decoration: none;
+.nav-link {
     color: var(--dark-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     
     padding: 24px 0;
-
+    
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link {
+    text-decoration: none;
 }
 
 .contact-link {
     color: var(--main-text-color); 
     font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 24px 0;
 }
 
 .link:hover,
@@ -569,9 +574,9 @@ p {
     color: #000;
     background-color: var(--description-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
