--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,16 @@ p {
     font-size: 16px;
     line-height: 1.5;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover,
-.link:focus {
+.contact-link:hover,
+.contact-link:focus {
+    color: var(--primary-brand-color);
+}
+
+.nav-link:hover,
+.nav-link:focus {
     color: var(--primary-brand-color);
 }
 
